# python-nbiobsp

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  nbiobsp_capture.h  nbiobsp_close.h  nbiobsp_init.h  nbiobsp_match.h  pynbiobsp.cpp  pynbiobsp.h  setup.py  tests.py
example/: tests.py
include/: NBioAPI.h  NBioAPI_Basic.h  NBioAPI_Error.h  NBioAPI_Export.h  NBioAPI_ExportType.h  NBioAPI_IndexSearch.h  NBioAPI_IndexSearchType.h  NBioAPI_Type.h
scripts/: test_fingerprint.py
src/: main.cpp
tests/: example.py  test_fingerprint.py
utils/: eNBioBSP_Driver_Linux_HamsterIII_v1.0.5-3.3_2018.08.22.tgz
utils/hamster-iii/: ngstardrv-v1.0.5-1-Ubuntu14.04-32bit-2015.03.18.tgz  ngstardrv-v1.0.5-2-Ubuntu14.04-64bit-2015.03.30.tgz
utils/hamster-iii/ngstardrv-v1.0.5-2-Ubuntu14.04-64bit/: 99-Nitgen-ngstardrv.rules  CreateModule  install-driver.sh  install.sh  ngstardrv.conf  ngstardrv.h  ngstardrv.ko  uninstall-driver.sh  uninstall.sh
utils/libs/: NBioBSP.lic
utils/libs/win32/: NBioBSPCOM.cab  NBioBSP_dll_function_names.txt
